      procedure is described in
      http://docs.mongodb.org/manual/tutorial/build-indexes-on-replica-sets/[Build indexes on replica sets].
      (#1087)

    - A unique index cannot be built in the background.  In previous
      versions such an index was turned into a foreground index, now an
      error is returned that lets the user choose what to do.  (#1091)


tokumx 1.4.1
------------
Release date: 2014-03-25

General
~~~~~~~

    - This release is focused on bug fixes since 1.4.0.


New features and improvements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

    - Improved the speed and reduced the impact of deletes after a chunk
      migration.  (#957)

    - Improved the speed of the `touch` command.  (#959)

    - TokuMX now gathers more information and tries to output it to the
      log on a crash.  (#987, #993)

    - Added `compressionRatio` section to `serverStatus` to report the
      compression ratio calculated on disk write.  (#989)

    - Added aggregate per-index stats in output of `db.collection.stats()`
      for sharded collections.  (#1019)


Bug fixes
~~~~~~~~~

    - Newly sharded databases now have their primary shard chosen as the
      most lightly loaded shard (by data size), rather than always
      choosing the first shard.  (#422, #1029)

    - Fixed the output of `show dbs` and `listDatabases` in sharded
      clusters.  (#962)

    - Fixed a bad query plan used by a secondary to find its rollback
      point in the oplog, which could cause startup to time out.  (#965)

    - Removed erroneous `system.namespaces` entries for partitioned
      collections, including the oplog.  (#966, #967)

    - Enabled the use of a hashed shard key when there is a user-defined
      primary key.  In 1.4.0, the shard key would be rejected because the
      primary key looks like a unique index whose uniqueness cannot be
      enforced, however, for a primary key it is enforced by the `_id`'s
      uniqueness assumption.  (#968)
